MDEV-11231 Server crashes in check_duplicate_key on CREATE TABLE ... SELECT

be consistent and don't include the table name into the error message,
no other CREATE TABLE error does it.

(the crash happened, because thd->lex->query_tables was NULL)